# -Bot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  bot.py  init_db.py  migrate_db.py  pyproject.toml  pytest.ini  requirements.txt  start_bot.bat  test.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 24a9104737cc_initial_schema.py
docs/: architecture.md  improvement-roadmap.md  project-plan.md  skills.md
nonebot_agent/: __init__.py  config.py  config_validation.py  database.py  models.py
nonebot_agent/agent/: __init__.py  chat_output.py  graph.py  llm_provider.py  prompts.py
nonebot_agent/emotion/: __init__.py  emotion_analyzer.py  emotion_state.py
nonebot_agent/memory/: __init__.py  chroma_memory.py  memory_context_formatter.py  memory_deduper.py  memory_manager.py  memory_store.py  memory_summary.py  memory_summary_manager.py  memory_writer.py  response_guard.py
nonebot_agent/plugins/: __init__.py  agent_chat.py  group_settings.py  message_parser.py  proactive_chat.py  sticker_sender.py  video_download.py
nonebot_agent/services/: __init__.py  chat_service.py  proactive_policy.py  proactive_runtime.py  proactive_service.py  response_sender.py
nonebot_agent/skills/: __init__.py  executor.py  knowledge.py  models.py  prefixes.py  registry.py  router.py
nonebot_agent/test/: __init__.py  address_qqdocurl_test.py  bilibili_spider_test.py  chroma_collections_test.py  chroma_operation.py  doubao_generate_image_test.py  douyin_spider_test.py  test_chat_output.py  test_config_validation.py  test_memory_structured.py  (+4 more)
tests/: __init__.py  conftest.py
(+95 files in other folders)
