[project]
name = "NoneBot_Agent"
version = "0.1.0"
description = "NoneBot2 + LangGraph Agent 智能 QQ 机器人"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    # NoneBot2
    "nonebot2[fastapi]>=2.4.4",
    "nonebot2[httpx]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    
    # LangChain & LangGraph (指定版本)
    "langchain==1.3.13",
    "langgraph>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.3.0",
    "langchain-core>=1.4.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.0",
    
    # Vector DB & Embeddings
    "chromadb>=0.4.0",
    "dashscope>=1.0.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",

    # Web
    "DrissionPage==4.1.1.2",

    "volcengine-python-sdk[ark]"
]

[project.optional-dependencies]
dev = [
    "pyright[nodejs]",
    "ruff"
]

[tool.nonebot]
plugin_dirs = ["nonebot_agent/plugins"]
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_agent"]
